Pint Changelog
==============

0.15 (unreleased)
-----------------

- Implement Dask collection interface to support Pint Quantity wrapped Dask arrays.
- Started automatically testing examples in the documentation
- Fixed right operand power for dimensionless Quantity to reflect numpy behavior. (Issue #1136)

0.14 (2020-07-01)
-----------------

- Changes required to support Pint-Pandas 0.1.


0.13 (2020-06-17)
-----------------
- Reinstated support for pickle protocol 0 and 1, which is required by pytables
  (Issue #1036, Thanks Guido Imperiale)
- Fixed bug with multiplication of Quantity by dict (Issue #1032)
- Bare zeros and NaNs (not wrapped by Quantity) are now gracefully accepted by all numpy
  operations; e.g. np.stack([Quantity([1, 2], "m"), [0, np.nan]) is now valid, whereas
  np.stack([Quantity([1, 2], "m"), [3, 4]) will continue raising DimensionalityError.
  (Issue #1050, Thanks Guido Imperiale)
- NaN is now treated the same as zero in addition, subtraction, equality, and
  disequality (Issue #1051, Thanks Guido Imperiale)
- Fixed issue where quantities with a very large magnitude would throw an IndexError
  when using to_compact()
- Fixed crash when a Unit with prefix is declared for the first time while a Context
  containing unit redefinitions is active
  (Issues #1062 and #1097, Thanks Guido Imperiale)
- New implementation of 'Lx' String Format Type Option
  The old implementation treated 'Lx' as 'S' as produced by 'uncertainties'
  package, but that is not fully compatible with SIunitx. The new code protects
  SIunitx by fixing what unceratinties produces.
  (Issue #814)
- Added link to budding `pint-xarray` interface library to the docs, next to
  the link to pint-pandas. (Thanks Tom Nicholas.)
- Removed outdated `_dir` attribute of `UnitsRegistry`, and added `__iter__`
  method so that now `list(ureg)` returns a list of all units in registry.
  (Issue #1072, Thanks Tom Nicholas)